--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -10,8 +10,23 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.0",
+    "@react-navigation/material-bottom-tabs": "^6.2.8",
+    "@react-navigation/native": "^6.1.0",
+    "@react-navigation/native-stack": "^6.9.5",
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.1",
+    "hermes": "^0.4.4",
     "react": "18.1.0",
-    "react-native": "0.70.6"
+    "react-native": "0.70.6",
+    "react-native-paper": "^5.0.1",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-vector-icons": "^9.2.0",
+    "react-navigation": "^4.4.4",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
